fixed breaks in about.html/css

--- a/css/about.css
+++ b/css/about.css
@@ -18,9 +18,9 @@ body{
 
 header{
     width: 100%;
-    height:15rem;
-    line-height: 25rem;
-    margin: 0;
+    height:  20%;
+    display: block;
+    margin: 0 auto;
     padding: 0;
     background-color: #962221;
         
@@ -78,14 +78,10 @@ div{
 }
 
 #leftlogo{
-    width: 7.5em;
-    height: 7.5em;
     float: left;
 }
 
 #rightlogo{
-    width: 7.5em;
-    height: 7.5em;
     float: right;
 }
 
@@ -93,10 +89,12 @@ div{
     width: 70%;
     margin-right: .5%;
     margin-top: 1%;
-    font-size: .63em;
+    font-size: 1em;
     background-color: #ffffff;
     color: #000000;
     list-style: none;
+    overflow: hidden;
+    overflow: auto;
     
 }
 
@@ -109,11 +107,13 @@ div{
     font-size: .9em;
     background-color: #ffffff;
     color: #000000;
-}
+    overflow: hidden;
+    overflow: auto;
+} 
 
 footer{
     width: 70%;
-    height:10rem;
+    height: 20%;
     margin-top: 1%;
     margin-left: 15%;
     padding: 0;
@@ -154,16 +154,13 @@ section > div > span >a:hover{
 
 footer > nav > ul > li{
     width: calc(100%/5);
-    height: 4em;
-    line-height: 4em;
     margin: 0 auto;
     float: left; 
     list-style: none;
 }
 
 .branches{
-    margin-left: calc(100%/5);
-    width: 40%;
+    width: 50%;
        
 }
 
